CLASE-13/RECURSOS/YAML/01-rbac-basico.yaml
# LAB 13.1 - RBAC declarativo. Equivale a los comandos 'kubectl create' del lab.
apiVersion: v1
kind: Namespace
metadata: {name: c13-rbac}
