CLASE-13/RECURSOS/YAML/04-gratitud-api-plano.yaml
# LAB 13.3 - Deployment api SIN securityContext y namespace SIN etiquetas de
# Pod Security. El alumno lo endurece hasta que pase el nivel 'restricted'.
apiVersion: v1
kind: Namespace
metadata: {name: gratitud-api, labels: {part-of: gratitud, tier: api}}
---
apiVersion: apps/v1
kind: Deployment
metadata: {name: api, namespace: gratitud-api, labels: {app: gratitud-api, part-of: gratitud}}
spec:
  replicas: 2
  selector: {matchLabels: {app: gratitud-api}}
  template:
    metadata: {labels: {app: gratitud-api, part-of: gratitud}}
    spec:
      containers:
        - name: api
          image: nginxinc/nginx-unprivileged:1.27-alpine    # escucha en 8080, corre como UID 101
          ports: [{containerPort: 8080}]
---
apiVersion: v1
kind: Service
metadata: {name: api, namespace: gratitud-api}
spec: {selector: {app: gratitud-api}, ports: [{port: 80, targetPort: 8080}]}
